<resources>
    <string name="app_name">Marvel Infinity App</string>
    <string name="movie_description">Movie Description</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="genre">Genre: </string>
    <string name="director">Director: </string>
    <string name="release">Release: </string>
    <string name="over">Natasha Romanoff, also known as Black Widow, confronts the darker parts of her ledger when a dangerous conspiracy with ties to her past arises. Pursued by a force that will stop at nothing to bring her down, Natasha must deal with her history as a spy and the broken relationships left in her wake long before she became an Avenger.</string>
    <string name="list">List</string>
    <string name="download">Download</string>
    <string name="movie">Movie</string>
    <string name="action">Action</string>
    <string name="avengers">Avengers: End game</string>
    <string name="year">Year</string>
    <string name="search_movie">Search Movie</string>
    <string name="now_playing">Em Cartaz</string>
    <string name="detalhes">Detalhes</string>
    <string name="no_gender">No Gender</string>
    <string name="search">Search</string>
    <string name="details">Detalhes</string>
    <string name="main_title">Marvel Infinity Saga</string>
    <string name="sort_by">Sort By</string>
    <string name="name">Name</string>
    <string name="actors">Actors: </string>
    <string name="runtime">Runtime: </string>
    <string name="writers">Writers: </string>
    <string name="favorite">Favorite</string>
    <string name="favorites">Favorites</string>
    <string name="no_favorites_here">No Favorites here</string>
    <string name="no_connection">No Connection</string>
    <string name="rated">Rated</string>
</resources>