<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/black"
    tools:context=".view.DetailsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        >


        <ImageView
            android:id="@+id/ivCurrentDetail"
            android:layout_width="0dp"
            android:layout_height="300dp"
            android:scaleType="centerCrop"

            android:contentDescription="@string/movie"
            app:layout_constraintBottom_toTopOf="@+id/constraintLayout2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="@drawable/gradient"
            app:layout_constraintBottom_toTopOf="@+id/constraintLayout2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            app:layout_constraintTop_toBottomOf="@id/ivCurrentDetail">

            <TextView
                android:id="@+id/tvCurrentTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif-condensed-medium"
                android:textColor="@color/ice"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/guideline7"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Black Widow" />

            <TextView
                android:id="@+id/tvOverview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed-light"
                android:justificationMode="inter_word"
                android:paddingTop="20dp"
                android:textColor="@color/ice"
                android:textSize="16sp"
                app:layout_constraintEnd_toStartOf="@+id/guideline8"
                app:layout_constraintStart_toStartOf="@+id/guideline7"
                app:layout_constraintTop_toBottomOf="@+id/tvCurrentTitle"
                tools:text="@string/over" />

            <TextView
                android:id="@+id/tvLabelGenre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="sans-serif-condensed"
                android:paddingEnd="4dp"
                android:text="@string/genre"
                android:textColor="@color/ice"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/guideline7"
                app:layout_constraintTop_toBottomOf="@id/tvOverview" />

            <TextView
                android:id="@+id/tvCurrentGenre"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed-light"
                android:textColor="@color/ice"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/tvLabelGenre"
                app:layout_constraintStart_toEndOf="@+id/tvLabelGenre"
                app:layout_constraintTop_toTopOf="@+id/tvLabelGenre" />

            <TextView
                android:id="@+id/tvLabelRelease"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:paddingEnd="4dp"
                android:text="@string/release"
                android:textColor="@color/ice"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/guideline7"
                app:layout_constraintTop_toBottomOf="@id/tvLabelGenre" />

            <TextView
                android:id="@+id/tvCurrentRelease"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed-light"
                android:textColor="@color/ice"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@id/tvLabelRelease"
                app:layout_constraintStart_toEndOf="@id/tvLabelRelease"
                app:layout_constraintTop_toTopOf="@id/tvLabelRelease"
                tools:text="2021" />

            <TextView
                android:id="@+id/tvLabelDirector"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:paddingEnd="4dp"
                android:text="@string/director"
                android:textColor="@color/ice"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/guideline7"
                app:layout_constraintTop_toBottomOf="@id/tvLabelRelease" />

            <TextView
                android:id="@+id/tvCurrentDirector"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed-light"
                android:textColor="@color/ice"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@id/tvLabelDirector"
                app:layout_constraintStart_toEndOf="@id/tvLabelDirector"
                app:layout_constraintTop_toTopOf="@id/tvLabelDirector"
                tools:text="English" />

            <TextView
                android:id="@+id/tvLabelRuntime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:paddingEnd="4dp"
                android:text="@string/runtime"
                android:textColor="@color/ice"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/guideline7"
                app:layout_constraintTop_toBottomOf="@id/tvLabelDirector" />

            <TextView
                android:id="@+id/tvCurrentRuntime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed-light"
                android:textColor="@color/ice"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@id/tvLabelRuntime"
                app:layout_constraintTop_toTopOf="@id/tvLabelRuntime"
                tools:text="Robert" />

            <TextView
                android:id="@+id/tvLabelRated"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:paddingEnd="4dp"
                android:text="@string/rated"
                android:textColor="@color/ice"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/guideline7"
                app:layout_constraintTop_toBottomOf="@id/tvLabelRuntime" />

            <TextView
                android:id="@+id/tvCurrentRated"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed-light"
                android:textColor="@color/ice"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@id/tvLabelRated"
                app:layout_constraintTop_toTopOf="@id/tvLabelRated"
                tools:text="Robert" />

            <TextView
                android:id="@+id/tvLabelActor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:paddingEnd="4dp"
                android:text="@string/actors"
                android:textColor="@color/ice"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/guideline7"
                app:layout_constraintTop_toBottomOf="@id/tvLabelRated" />

            <TextView
                android:id="@+id/tvCurrentActor"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed-light"
                android:textColor="@color/ice"
                android:textSize="16sp"
                app:layout_constraintEnd_toStartOf="@+id/guideline8"
                app:layout_constraintStart_toEndOf="@id/tvLabelActor"
                app:layout_constraintTop_toTopOf="@id/tvLabelActor"
                tools:text="Robert" />

            <TextView
                android:id="@+id/tvLabelWriters"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:paddingEnd="4dp"
                android:text="@string/writers"
                android:textColor="@color/ice"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/guideline7"
                app:layout_constraintTop_toBottomOf="@+id/tvCurrentActor" />

            <TextView
                android:id="@+id/tvCurrentWriters"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed-light"
                android:textColor="@color/ice"
                android:textSize="16sp"
                app:layout_constraintEnd_toStartOf="@+id/guideline8"
                app:layout_constraintStart_toEndOf="@id/tvLabelWriters"
                app:layout_constraintTop_toBottomOf="@+id/tvCurrentActor"
                tools:text="Robert" />



            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.30" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.70" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="72dp"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="65dp"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.50" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.05" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.95" />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>